--- a/binary-tree/binary-tree0.0.html
+++ b/binary-tree/binary-tree0.0.html
@@ -7,7 +7,7 @@
 <canvas onClick="canvasClick()" width="1500" height="1000" id="cans" />
 <script type="text/javascript">
 
-let fixedL = 20;
+let fixedL = 10;
 let canvas = document.getElementById('cans');
 let ctx = canvas.getContext('2d');
 
@@ -136,7 +136,7 @@ function nodeTree(arrData){
 	})
 }
 
-let nowTree = new nodeTree([7,5,2,8,1,9,6,50,30,21]);
+let nowTree = new nodeTree([7,52,5,61,2,1,19,9,8,,10,6,50,30,21]);
 nowTree.drawTree();
 
 </script>
