--- a/binary-tree/binary-tree0.1.html
+++ b/binary-tree/binary-tree0.1.html
@@ -6,6 +6,9 @@
 <body>
 <canvas onClick="canvasClick()" width="1500" height="1000" id="cans" />
 <script type="text/javascript">
+/*
+ * 主要分支的构建
+ */
 let fixedL = 10;
 let canvas = document.getElementById('cans');
 let ctx = canvas.getContext('2d');
